--- a/package.json
+++ b/package.json
@@ -4,18 +4,33 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write '**/*.{js,css,json,md}'"
+    "format": "prettier --write '**/*.{js,css,json,md}'",
+    "lint:js": "eslint \"**/*.{js,jsx,}\"",
+    "lint:markdown": "markdownlint *.md",
+    "lint:grammar": "write-good *.md --no-passive",
+    "lint:spellcheck": "mdspell *.md --ignore-numbers --report",
+    "lint": "run-p lint:*",
+    "audit-security": "audit-ci --config ./audit-ci.json"
   },
   "author": "{{ authors }}",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "audit-ci": "^2.5.1",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "husky": "^2.1.0",
-    "prettier": "^1.17.0"
+    "markdown-spellcheck": "^1.3.1",
+    "markdownlint-cli": "^0.22.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1",
+    "write-good": "^1.0.2"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format",
-      "pre-push": "npm run format"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   }
 }
